<resources>
    <string name="app_name">Doggle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dog_breeds">Dog Breeds</string>
    <string name="result">Result</string>
    <string name="find_the_breed">Find the breed</string>
    <string name="working">Working</string>
    <string name="sporting">Sporting</string>
    <string name="herding">Herding</string>
    <string name="non_sporting">Non-Sporting</string>
    <string name="toy">Toy</string>
    <string name="hound">Hound</string>
    <string name="which_breed_group_are_you_interested_in">Which breed group are you interested in?</string>
    <string name="no_no_allergies">No (No allergies)</string>
    <string name="yes_allergies_present">Yes (Allergies present)</string>
    <string name="do_you_or_anyone_in_your_household_have_allergies_to_dogs">Do you or anyone in your household have allergies to dogs?</string>
    <string name="high_significant_shedding">High (Significant shedding)</string>
    <string name="low_minimal_shedding">Low (Minimal shedding)</string>
    <string name="moderate_some_shedding">Moderate (Some shedding)</string>
    <string name="how_much_shedding_are_you_comfortable_with">How much shedding are you comfortable with?</string>
    <string name="spacious_yard_plenty_of_outdoor_space">Spacious yard (Plenty of outdoor space)</string>
    <string name="apartment_limited_outdoor_space">Apartment (Limited outdoor space)</string>
    <string name="what_type_of_living_space_do_you_have">What type of living space do you have?</string>
    <string name="high_frequent_physical_activity_and_exercise">High (Frequent physical activity and exercise)</string>
    <string name="moderate_regular_walks_and_playtime">Moderate (Regular walks and playtime)</string>
    <string name="how_much_exercise_can_you_provide_for_your_dog">How much exercise can you provide for your dog?</string>
    <string name="high_highly_trainable">High (Highly trainable)</string>
    <string name="moderate_some_training_required">Moderate (Some training required)</string>
    <string name="low_limited_exercise">Low (Limited exercise)</string>
    <string name="low_not_easily_trainable">Low (Not easily trainable)</string>
    <string name="how_trainable_would_you_prefer_your_dog_to_be">How trainable would you prefer your dog to be?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_have_other_pets_at_home">Do you have other pets at home?</string>
    <string name="dog_finder">Dog Finder</string>
    <string name="want_a_dog_let_us_help_you_find_the_perfect_breed_for_you">Want a dog? Let us help you find the perfect breed for you.</string>
    <string name="what_size_of_dog_are_you_looking_for">What size of dog are you looking for?</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="how_would_you_describe_your_ideal_dog_s_energy_level">How would you describe your ideal dog\'s energy level?</string>
    <string name="low_calm_and_relaxed">Low (Calm and relaxed)</string>
    <string name="moderate_playful_and_active">Moderate (Playful and active)</string>
    <string name="high_energetic_and_lively">High (Energetic and lively)</string>
    <string name="how_much_grooming_are_you_willing_to_do">How much grooming are you willing to do?</string>
    <string name="low_minimal_grooming_required">Low (Minimal grooming required)</string>
    <string name="moderate_regular_grooming_needed">Moderate (Regular grooming needed)</string>
    <string name="high_extensive_grooming_required">High (Extensive grooming required)</string>
    <string name="do_you_have_children_at_home">Do you have children at home?</string>
    <string name="selected_image">Selected Image:</string>
    <string name="know_your_dog_s_breed">Know your Dog\'s Breed</string>
    <string name="curious_about_your_dog_s_breed_nshare_a_picture_and_let_the_ai_work_it_s_magic">Curious about your dog\'s breed?, \nShare a picture and let the AI work it\'s magic.</string>
    <string name="capture_a_photo">Capture a photo</string>
    <string name="load_from_gallery">Load from Gallery</string>
    <string name="scan">Scan</string>
    <string name="breeds">Breeds</string>
    <string name="finder">Finder</string>
    <string name="profile">Profile</string>
</resources>